--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@supabase/supabase-js": "^2.97.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -23,6 +25,7 @@
     "react-router-dom": "^7.13.1",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.5.0",
+    "three": "^0.183.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
